# PTMK_test

./: .gitignore  CMakeLists.txt  README.md
dataBase/: create_database.sql  init_tables.sql
include/: DBManager.hpp  Employee.hpp
src/: DBManager.cpp  Employee.cpp  main.cpp
